


VERSION 0.2.0: minor revision - zo nov 10 17:20:52 CET 2013

adding additional handy procedures for doing basic NetCDF operations from deprecated ncdftools package so that pynacolada becomes independent of it.
moving README.txt to README.md (github standard)


VERSION 0.1.0: minor revision - zo nov 10 15:12:39 CET 2013

Adding information on how to install package (see INSTALL)
Adding build-files to package (cfr. ./ubuntubuild.sh)
bugfix when defining the extra dimension for a file list (still needs to be tested)
adding some

VERSION 0.0.3: sub revision - vr nov  8 15:00:04 CET 2013

Add exmple directory and licence


VERSION 0.0.2: sub revision - vr nov  8 14:55:00 CET 2013


example update in README.txt

VERSION 0.0.1: sub revision - vr nov  8 14:38:12 CET 2013


Initial version. 

Current options that implemented:

 - implement dimension aliases (-> implemented as 'daliases'-option for the data input definition)
 - allow multiple input files in a stream (such as hourly climate data). Therefore, one needs to define input data as a filename-list
 - select custom coordinate frames (-> implemented as 'dsel'-option for data input definition)
 - detect output dtype, first from output data file, then from output function
 - sensible determination of memory limitation (-> maxmembytes)
 - allow wild cards in specifying function dimensions (-> appenddim!)